fix: remove multi list for deisgnation type

--- a/coral/templates/views/components/workflows/fmw-workflow/get-selected-monument-details.htm
+++ b/coral/templates/views/components/workflows/fmw-workflow/get-selected-monument-details.htm
@@ -348,9 +348,7 @@
                     </div>
                     <div style="display: flex; flex-direction: column; gap: 4px">
                         <span style="font-weight: bold; font-size: 14px">Designation Type</span>
-                        <!-- ko foreach: cards()[monument].designationType -->
-                        <span data-bind="text: $data" style="background: white; padding: 4px 10px; border-radius: 4px">None</span>
-                        <!-- /ko -->
+                        <span data-bind="text: cards()[monument].designationType" style="background: white; padding: 4px 10px; border-radius: 4px">None</span>
                     </div>
                     <div style="display: flex; flex-direction: column; gap: 4px">
                         <span style="font-weight: bold; font-size: 14px">Townland</span>
