--- a/coral/templates/views/components/reports/scenes/enforcements.htm
+++ b/coral/templates/views/components/reports/scenes/enforcements.htm
@@ -1,5 +1,5 @@
 <!-- ko foreach: {data: enforcements, as: 'enforcement'} -->
-<span data-bind="attr: {href:enforcement.url, title: enforcement.name}">
+<span>
     <h4 class="workflow-select-title" data-bind="text: enforcement.name"></h4>
 </span>
 <!-- /ko -->
