--- a/coral/templates/views/components/plugins/open-scheduled-monument-consent-workflow.htm
+++ b/coral/templates/views/components/plugins/open-scheduled-monument-consent-workflow.htm
@@ -13,7 +13,7 @@
             placeholder: 'Please select a Heritage Asset',
           },
           renderContext: 'workflow',
-          value: selectedBuilding
+          value: selectedHA
         }
       }"
     ></div>
@@ -48,7 +48,7 @@
         await startNew().then(async () => {
           await openWorkflow()
         });
-      }, disable: !selectedBuilding()"
+      }, disable: !selectedHA()"
     >
       <span>Start New</span>
     </button>
