style: fix column heights and scrolls

--- a/coral/media/css/dashboard.css
+++ b/coral/media/css/dashboard.css
@@ -41,3 +41,11 @@
 .margin-right-10 {
     margin-right: 10px;
 }
+
+.card-column-height-m {
+    height: 75px;
+}
+
+.overflow-scroll {
+    overflow: auto;
+}
