fix: add search string to filter smc ha to smr numbers

--- a/coral/templates/views/components/plugins/open-scheduled-monument-consent-workflow.htm
+++ b/coral/templates/views/components/plugins/open-scheduled-monument-consent-workflow.htm
@@ -13,7 +13,8 @@
             placeholder: 'Please select a Heritage Asset',
           },
           renderContext: 'workflow',
-          value: selectedHA
+          value: selectedHA,
+          searchString: smrSearchString
         }
       }"
     ></div>
