--- a/coral/templates/views/components/reports/heritage-asset-merge.htm
+++ b/coral/templates/views/components/reports/heritage-asset-merge.htm
@@ -37,12 +37,18 @@
                     }
                 }"></div>
             </div>
-            <div class="aher-report-page">
+            <div class="rp-card-section" style="padding-bottom: 0; margin: 0 10px;">
+                <div class="h5 rp-tile-title">
+                    <span class="rp-tile-title" >Base Report Details</span>
+                </div>
                 <div class="aher-tabbed-report-content">
                     <div data-bind="text: descriptionCards.baseResourceDetails"></div>
                 </div>
             </div>
-            <div class="aher-report-page">
+            <div class="rp-card-section" style="padding-bottom: 0; margin: 0 10px;">
+                <div class="h5 rp-tile-title">
+                    <span class="rp-tile-title" >Merged Report Details</span>
+                </div>
                 <div class="aher-tabbed-report-content">
                     <div data-bind="text: descriptionCards.mergeResourceDetails"></div>
                 </div>
