--- a/coral/templates/views/components/plugins/init-workflow.htm
+++ b/coral/templates/views/components/plugins/init-workflow.htm
@@ -1,4 +1,4 @@
-<div class="workflow-select-plugin">
+<div class="workflow-select-plugin scrollable h-95vh">
   <div>
       <h2 class="workflow-select-card-container-title">Create New...</h2>
   </div>
