--- a/coral/templates/views/components/search/resource-type-filter.htm
+++ b/coral/templates/views/components/search/resource-type-filter.htm
@@ -6,7 +6,7 @@
             <span data-bind="text: $root.translations.resourceType"></span>
             <i class="dropdown-caret fa fa-caret-down"></i>
         </button>
-        <ul id="resource-type-filter-contents" class="dropdown-menu dropdown-menu-right scrollable h-80vh">
+        <ul id="resource-type-filter-contents" class="dropdown-menu dropdown-menu-right scrollable mh-80vh">
             <li><a href="#" data-bind="onEnterkeyClick, click: selectModelType.bind($data, null)">
                 <span data-bind="text: $root.translations.allResources"></span>
             </a></li>
