fix: set resource instance info to show full report with empty nodes hidden

--- a/coral/templates/views/components/widgets/resource-instance-select.htm
+++ b/coral/templates/views/components/widgets/resource-instance-select.htm
@@ -223,7 +223,7 @@
         name: 'resource-report-abstract',
         params: {
             resourceid: reportResourceId(),
-            summary: true,
+            summary: false,
         }
     }"></div>
     <!-- /ko -->
