fix: fix typo in eval wf select

--- a/coral/templates/views/components/plugins/open-evaluation-meeting-workflow.htm
+++ b/coral/templates/views/components/plugins/open-evaluation-meeting-workflow.htm
@@ -29,7 +29,7 @@
           configKeys: configKeys
         },
         config: {
-          placeholder: 'Select a Evaluation Meeting or start new',
+          placeholder: 'Select an Evaluation Meeting or start a new one',
           
           label: 'Selected Evaluation Meeting',
         },
