fix: remove resource editor button on the main page
This removes the resource editor in the sidebar if you are not admin and
removes manage from the home page nav bar and replaces it with dashboard

--- a/coral/templates/index.htm
+++ b/coral/templates/index.htm
@@ -84,7 +84,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         </li>
                         {% if user|can_create_resource_instance and user.username != 'anonymous' %}
                             <li>
-                                <a href="{% url 'resource' %}" target="_blank">{% trans "Manage" %}</a>
+                                <a href="plugins/dashboard" target="_blank">{% trans "Dashboard" %}</a>
                             </li>
                             <li>
                                 <a href="plugins/init-workflow">{% trans "Workflows" %}</a>
