--- a/coral/templates/views/components/reports/scenes/user-account.htm
+++ b/coral/templates/views/components/reports/scenes/user-account.htm
@@ -6,7 +6,7 @@
 <div class="aher-report-section">
     <h2 class="aher-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.userAccount)}, css: {'fa-angle-double-right': visible.userAccount(), 'fa-angle-double-up': !visible.userAccount()}" class="fa toggle"></i> {% trans "User Account Details" %}</h2>
     <span data-bind="if: cards.userAccount && (!userAccount() || cards.userAccount.cardinality == 'n')">
-        <a class="aher-report-a" data-bind="click: function(){add(cards.userAccount)}"><i class="fa fa-mail-reply"></i> {% trans "Add User Accout Details" %}</a>
+        <a class="aher-report-a" data-bind="click: function(){add(cards.userAccount)}"><i class="fa fa-mail-reply"></i> {% trans "Add User Account Details" %}</a>
     </span>
 
     <!-- Collapsible content -->
